# encrypted_buffer_cpp_rust

receiver_cpp/: Cargo.toml  lib.h
receiver_cpp/src/: lib.rs
receiver_cpp/tests/: receiver_tests.rs
