[package]
name = "receiver_cpp"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
rustls = "0.21.0"
rustls-pemfile = "1.0.3" 
mio = { version = "0.7.0", features =["net", "os-poll"] }
log = "0.4.14"
docopt = "1.1.0"
ring = { version = "0.16.20", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cursor = "2.3.0"
libc = "0.2.147"


[features]
test-env = []
default = ["test-env"]
